examples/test/testpolicy4563.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4563
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key24: value4
      key39: value44
      key44: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value9
          key0: value42
      podSelector:
        matchLabels:
          key30: value49
